Fix row gap.

--- a/styles/Pizza.css
+++ b/styles/Pizza.css
@@ -31,7 +31,7 @@
     display:grid;
     grid-template-rows: auto auto;
     margin-left: 25.52px;
-    row-gap: 14px;
+    row-gap: 2px;
 }
 
 .pizza__infoTitle{
